welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:9: error: ';' expected but 'return' found.
  } return maxi2
    ^